objects/SGR_Option_Result__c.object
<CustomObject>
    <fields>
        <fullName>Area_Factor_Class__c</fullName>
        <label>Area Factor Class</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Name__c</fullName>
        <label>Benefit Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Type__c</fullName>
        <label>Benefit Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Rate_Result__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan Rate Result</label>
        <referenceTo>SGR_Plan_Rate_Result__c</referenceTo>
        <relationshipLabel>Option Results</relationshipLabel>
        <relationshipName>Option_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Option Result</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Option Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Option Results</pluralLabel>
    <recordTypes>
        <fullName>Option_Result</fullName>
        <active>true</active>
        <description>Option Result Record Type</description>
        <label>Option Result</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>